<resources>
    <string name="app_name">Popular Movies</string>

    <string name="overview_filler">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
        nulla pariatur</string>

    <!-- Settings Menu Item [CHAR LIMIT=NONE] -->
    <string name="settings_menu_item">Settings</string>
    <!-- Settings Activity Title [CHAR LIMIT=NONE] -->
    <string name="settings_title">Movie Settings</string>

    <!-- Strings For Order-By Preference [CHAR LIMIT=30] -->
    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key" translatable="false">order_by</string>
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_popular_value</string>

    <!-- Label for order-by most popular option [CHAR LIMIT=20] -->
    <string name="settings_order_by_popular_label">Most Popular</string>
    <string name="settings_order_by_popular_value" translatable="false">popular?</string>

    <!-- Label for order-by highest rated option [CHAR LIMIT=20] -->
    <string name="settings_order_by_rating_label">Highest-Rated</string>
    <string name="settings_order_by_rating_value" translatable="false">top_rated?</string>

    <!-- Label for order-by favorites option [CHAR LIMIT=20] -->
    <string name="settings_order_by_favorites_label">Favorites</string>
    <string name="settings_order_by_favorites_value" translatable="false">favorite</string>

    <!-- Error message for when NetworkInfo is null -->
    <string name="no_internet_connection">
        No internet connection.\n
        Try:\n
        Turning off Airplane mode\n
        Turning on mobile data or Wi-fi\n
        Checking the signal in your area
    </string>

    <!-- Error message for when there are no Movies found [CHAR LIMIT=20] -->
    <string name="no_data">No movies found.</string>

    <!-- Located within movie_item.xml [CHAR LIMIT=20] -->
    <string name="movie_item_rating_filler">9.5</string>
    <string name="movie_item_title_filler">Interstellar</string>

    <!-- Located within detail_activity.xml [CHAR LIMIT=20] -->
    <string name="detail_rating_filler">8.7 / 10</string>
    <string name="detail_separator">|</string>
    <string name="detail_release_date_filler">2018-04-10</string>
    <string name="detail_overview_label">Overview</string>
    <string name="detail_10_stars">/ 10</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_overview">Overview</string>
    <string name="label_video">Video</string>
    <string name="label_review">Review</string>
    <string name="no_videos">No videos found.</string>
    <string name="no_reviews">No reviews found.</string>
    <string name="action_favorite">Favorite</string>
    <string name="detail_activity_added_favorite">Added to Favorites</string>
    <string name="detail_activity_removed_favorite">Removed from Favorites</string>
    <string name="main_activity_no_favorites">You have not added any favorites.</string>
</resources>
