<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/iv_backdrop"
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_backdrop_height"
        android:scaleType="centerCrop"
        android:src="@drawable/thumbnail_meduim"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_poster_thumbnail"
        android:layout_width="@dimen/detail_thumbnail_width"
        android:layout_height="@dimen/detail_thumbnail_height"
        android:layout_marginBottom="@dimen/padding_margin_16dp"
        android:layout_marginLeft="@dimen/padding_margin_16dp"
        android:layout_marginStart="@dimen/padding_margin_16dp"
        android:background="@drawable/rectangle_shape"
        android:scaleType="centerCrop"
        android:src="@drawable/thumbnail_meduim"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/iv_backdrop" />

    <View
        android:id="@+id/view"
        style="@style/Border"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- MAIN DETAILS -->
    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cyan_500_translucent_90"
        android:paddingBottom="@dimen/padding_margin_8dp"
        android:paddingLeft="@dimen/padding_margin_16dp"
        android:paddingRight="@dimen/padding_margin_8dp"
        android:paddingTop="@dimen/padding_margin_8dp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_backdrop"
        app:layout_constraintStart_toStartOf="@+id/iv_backdrop">

        <TextView
            android:id="@+id/tv_title"
            style="@style/MainDetailText.Title"
            android:textColor="@color/white"
            tools:text="@string/movie_item_title_filler" />

        <TextView
            android:id="@+id/tv_rating"
            style="@style/MainDetailText.Details"
            android:layout_below="@+id/tv_title"
            android:textColor="@color/white"
            tools:text="@string/detail_rating_filler" />

        <TextView
            android:id="@+id/tv_seperator"
            style="@style/MainDetailText.Details"
            android:layout_below="@id/tv_title"
            android:layout_marginLeft="@dimen/padding_margin_8dp"
            android:layout_toRightOf="@+id/tv_rating"
            android:text="@string/detail_separator"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv_release_date"
            style="@style/MainDetailText.Details"
            android:layout_below="@+id/tv_title"
            android:layout_marginLeft="@dimen/padding_margin_8dp"
            android:layout_toRightOf="@id/tv_seperator"
            android:textColor="@color/white"
            tools:text="@string/detail_release_date_filler" />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>