<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_backdrop"
            android:layout_width="match_parent"
            android:layout_height="@dimen/detail_backdrop_height"
            android:scaleType="centerCrop"
            android:src="@drawable/thumbnail_meduim"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_poster_thumbnail"
            android:layout_width="@dimen/detail_thumbnail_width"
            android:layout_height="@dimen/detail_thumbnail_height"
            android:layout_marginBottom="@dimen/padding_margin_16dp"
            android:layout_marginLeft="@dimen/padding_margin_16dp"
            android:layout_marginStart="@dimen/padding_margin_16dp"
            android:background="@drawable/rectangle_shape"
            android:scaleType="centerCrop"
            android:src="@drawable/thumbnail_meduim"
            app:layout_constraintBottom_toTopOf="@+id/view"
            app:layout_constraintStart_toStartOf="@+id/iv_backdrop" />

        <View
            android:id="@+id/view"
            style="@style/Border"
            app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
            app:layout_constraintStart_toStartOf="parent" />

        <!-- MAIN DETAILS -->
        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cyan_500_translucent"
            android:paddingBottom="@dimen/padding_margin_8dp"
            android:paddingLeft="@dimen/padding_margin_16dp"
            android:paddingRight="@dimen/padding_margin_8dp"
            android:paddingTop="@dimen/padding_margin_8dp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_backdrop"
            app:layout_constraintStart_toStartOf="@+id/iv_backdrop">

            <TextView
                android:id="@+id/tv_title"
                style="@style/MainDetailText.Title"
                android:textColor="@color/white"
                tools:text="@string/movie_item_title_filler" />

            <TextView
                android:id="@+id/tv_rating"
                style="@style/MainDetailText.Details"
                android:layout_below="@+id/tv_title"
                android:textColor="@color/white"
                tools:text="@string/detail_rating_filler" />

            <TextView
                android:id="@+id/tv_seperator"
                style="@style/MainDetailText.Details"
                android:layout_below="@id/tv_title"
                android:layout_marginLeft="@dimen/padding_margin_8dp"
                android:layout_toRightOf="@+id/tv_rating"
                android:text="@string/detail_separator"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tv_release_date"
                style="@style/MainDetailText.Details"
                android:layout_below="@+id/tv_title"
                android:layout_marginLeft="@dimen/padding_margin_8dp"
                android:layout_toRightOf="@id/tv_seperator"
                android:textColor="@color/white"
                tools:text="@string/detail_release_date_filler" />

        </RelativeLayout>

        <View
            style="@style/Border"
            app:layout_constraintStart_toStartOf="@+id/relativeLayout"
            app:layout_constraintTop_toTopOf="@+id/overview_label" />

        <!-- OVERVIEW -->
        <TextView
            android:id="@+id/overview_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/padding_margin_16dp"
            android:paddingTop="@dimen/padding_margin_8dp"
            android:text="@string/detail_overview_label"
            android:textSize="@dimen/text_20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/iv_backdrop"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/detail_border_small"
            android:layout_marginLeft="@dimen/padding_margin_8dp"
            android:layout_marginRight="@dimen/padding_margin_16dp"
            android:layout_marginTop="@dimen/padding_margin_4dp"
            android:background="@color/xml_border"
            app:layout_constraintStart_toStartOf="@+id/overview_label"
            app:layout_constraintTop_toBottomOf="@+id/overview_label" />

        <TextView
            android:id="@+id/tv_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_margin_16dp"
            android:paddingLeft="@dimen/padding_margin_16dp"
            android:paddingRight="@dimen/padding_margin_16dp"
            android:paddingTop="@dimen/padding_margin_8dp"
            android:textSize="@dimen/text_16sp"
            app:layout_constraintStart_toStartOf="@+id/iv_backdrop"
            app:layout_constraintTop_toBottomOf="@+id/overview_label"
            tools:text="@string/overview_filler" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>